src/sass/components/_footer.scss
// Footer
footer {
    margin: 40px 0 0;
    padding: 40px 0;
    background-color: $footer-bg;
    border-top: 1px solid $border-color;
    font-size: .6875rem;
    color: darken($text-color, 20%);

    @media (min-width: 576px) {
        font-size: 1rem;
    }

    p {
        margin: 0;
    }

    a {
        color: $text-color;
        text-decoration: none;
        transition: color .2s ease;

        &:hover,
        &:focus {
            color: lighten($text-color, 10%);
            cursor: pointer;
        }
    }

    .social-list {
        margin-top: 1rem;
        text-align: center;

        @media (min-width: 992px) {
            margin: 0;
            text-align: right;
        }

        li {
            &:first-of-type {
                margin: 0 5px 0 0;
            }

            &:last-of-type {
                margin: 0 0 0 5px;
            }

            a > i.mdi {
                font-size: 1.25rem;
            }
        }
        
    }
}

